# boomerang

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.claude/skills/vhs-tmux-recording/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/demo/: browse-and-yank.tape  demo.tmux.conf  edit-issue.tape  quick-capture.tape  seed-issues.sh
scripts/: release.sh
src/: config.rs  copy.rs  diagnostics.rs  gh.rs  loading.rs  main.rs  model.rs  search.rs  shimmer.rs  ui.rs
