[package]
name = "boomerang"
version = "0.3.14"
edition = "2021"
description = "A tmux-popup TUI for browsing, searching, creating, editing, and closing GitHub issues in the current repo"
license = "MIT"

[[bin]]
name = "boomerang"
path = "src/main.rs"

[dependencies]
anyhow = "1"
crossterm = "0.29"
nucleo-matcher = "0.3"
ratatui = "0.30"
ratatui-textarea = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[profile.release]
opt-level = 3
lto = true
